삭제된 듯한 메일침프 구독폼을 주석처리합니다.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,7 +58,7 @@
 <script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | relative_url }}"></script>
 <script src="{{ "/assets/javascript/main.js" | relative_url }}"></script>
 
-<script src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us19.list-manage.com","uuid":"10a0349901cb4785cf768c7c0","lid":"3af3550e1c","uniqueMethods":true}) })</script>
+<!-- <script src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us19.list-manage.com","uuid":"10a0349901cb4785cf768c7c0","lid":"3af3550e1c","uniqueMethods":true}) })</script> -->
 {% if page.path == 'front.html' or page.path == 'en/front.html' %}
 <script src="//cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
 <script>
